# go-ffi

./: .gitignore  Makefile  README.md  build.sh  go.mod  go.sum  install-rockxcrypto
cgo/: crypto.go  help.go  types.go
cmd/crypto/: main.go
rust/: Cargo.toml
rust/scripts/: build-release.sh
rust/src/: lib.rs
rust/src/crypto/: api.rs
