[package]
name = "rockxcrypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
safer-ffi = { version = "0.0.7", features = ["proc_macros"] }
ed25519-dalek = { version = "1.0.1", features = [] }
#curve25519-dalek = { version = "2.1.0", default-features = false }

[features]
c-headers = ["safer-ffi/headers"]